# jrg-poetry-nix-experiment

./: .gitignore  Makefile  README.md  default.nix  pyproject.toml  release.nix  shell.nix
.nix/: default.nix  overlay-internal.nix  release.nix
tests/: test_myapp.py
